feat: add a section for setting up full text search locally